# Process-Monitor

./: .gitignore  CMakeLists.txt  README.md  runBackend.sh
backend/: .gitignore  CMakeLists.txt  folderStructure.md  main.cpp  simple_server.cpp  vcpkg.json
backend/config/: config.json
backend/include/core/: healt_checker.h  process_config.h  process_manager.h  restart_strategy.h
backend/include/logging/: logger.h
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
